force-app/main/default/objects/Case_Step__c/Case_Step__c.object-meta.xml
<CustomObject>
    <label>Case Step</label>
    <nameField>
        <label>Case Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>