force-app/main/default/objects/Case_Step__c/fields/Associated_Status__c.field-meta.xml
<CustomField>
    <fullName>Associated_Status__c</fullName>
    <label>Associated Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>