force-app/main/default/objects/Case_Step__c/fields/Flow_By_User__c.field-meta.xml
<CustomField>
    <fullName>Flow_By_User__c</fullName>
    <label>Flow By User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>