force-app/main/default/objects/Case_Step__c/fields/IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCompleted</label>
    <type>Checkbox</type>
</CustomField>