force-app/main/default/objects/Case_Step__c/fields/Plan_Step__c.field-meta.xml
<CustomField>
    <fullName>Plan_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Step</label>
    <referenceTo>Plan_Step__c</referenceTo>
    <relationshipLabel>Case Steps</relationshipLabel>
    <relationshipName>Case_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>