force-app/main/default/objects/Case_Step__c/fields/PlanStepOrder__c.field-meta.xml
<CustomField>
    <fullName>PlanStepOrder__c</fullName>
    <label>PlanStepOrderDate</label>
    <type>DateTime</type>
</CustomField>